# PR_DNS_base

./: .gitignore  README.md  install_IC.md  install_IC_cuda.md  install_heffte.md  parameters.md
DNS/: CMakeLists.txt  Makefile  cmake_install.cmake  post_process_libtorch.py  prdns-dahlia.txt
DNS/climate/: 11.py  CMakeLists.txt  Makefile  climate.cpp  climate.h  clminit.cpp  clmsub.cpp  cmake_install.cmake  fft.cpp  machine_learning.cpp  run_DNS_2d.sh  run_DNS_3d.sh  testgpu.cu  vcartsn.cpp  vcartsn.cu
DNS/climate/diag/: wind2png.py
DNS/climate/input-entrainment/: in-entrainment2dm
DNS/climate/input-pr-dns/: in-entrainment3dd_bcgsl_hypre_64  in-entrainment3dd_case1  in-entrainment3dd_case1_vlm_test1  in-entrainment3dd_case2  in-entrainment3dd_case3_abdullah  in-entrainment3dd_gmres_pcgamc_64
DNS/cmake-modules/: FindHDF4.cmake  FindHDF5.cmake  FindPETSc.cmake
DNS/iFluid/: CMakeLists.txt  Makefile  cmake_install.cmake  iFbasic.cpp  iFcartsn2d.cpp  iFcartsn3d.cpp  iFinit.cpp  iFluid.h  iFsub.cpp
DNS/iFluid/input-TG/: in-TG3d
DNS/solver/: Makefile  cmake_install.cmake  dual_ellip.cpp  ellip.cpp  hyperb.cpp  parab.cpp  solver.cpp  solver.h
DNS/src/: Makefile  cmake_install.cmake
DNS/src/front/: fadv3d.c  fapi.h  fbdry1.c  fcorrspnd.c  fcrosscur.c  fcrossext.c  fcrstatus.c  fgb2d.c  fgb3comp.c  fgb3d.c  fgb3dutil.c  finit.c  fint.c  fmap.c  fmap2.c  fnode.c  fnodesub.c  fpatch3d.c  fprint.c  fprop3d.c  fredist3d.c  frp1.c  fscat2d.c  fscat3d1.c  fscat3d2.c  fscat3d3.c  fscatter.c  fstate.c  fstate2d.c  fsub.c  funtan2d.c  funtan3d.c  fuserintfc.c  testfront.c
DNS/src/intfc/: arrayutils.c  comp.c  comp1d.c  comp2d.c  comp3d.c  geomutils.c  iMesh.c  iblkc2.c  idiagnostic.c  ifourier.c  igrid.c  igview.c  imap.c  imkcurve.c  imksurf.c  int.h  int3d.c  intfc.c  iredist_o2.c  irefl.c  iscatter.c  isect3d.c  isub.c  isurgery.c  itrisset.c  map.c  ppcopy.c  top.c  triangle.c  userhooks.c  zoom.c
DNS/src/util/: cdecs.h  fft.c  matrix.c  output.c  ppsub.c  quad.c  random.c  vectormalloc.c  vmalloc.h
